Rediseño visual y corrección de estilos en todas las secciones. Mejora de menú, tarjetas y funcionalidad Bootstrap.

--- a/miLibreria/css/stylecontacto.css
+++ b/miLibreria/css/stylecontacto.css
@@ -1,6 +1,3 @@
-.container {
-    margin: 50px;
-    padding: 0;
-    background-color: #7FB3D5 ;
-}
+
+/* Eliminar estilos que afecten el navbar */
 
